java/script/jass/extensible-jass/parser/generated/parser/java/w3/script/jass/extensible_jass/jParser.java
// Generated from j.g4 by ANTLR 4.7.1
package w3.script.jass.extensible_jass;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class jParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ARRAY=1, ASSIGN=2, BOOL_TYPE=3, BRACKET_LEFT=4, BRACKET_RIGHT=5, CALL=6, 
		CASE=7, CODE_TYPE=8, COMMA=9, CONSTANT=10, DEBUG=11, DEFAULT_CASE=12, 
		ELSE=13, ELSEIF=14, ENDFUNCTION=15, ENDGLOBALS=16, ENDIF=17, ENDLOOP=18, 
		ENDSELECT=19, EXITWHEN=20, EXTENDS=21, FUNCTION=22, GLOBALS=23, HANDLE_TYPE=24, 
		IF=25, INT_TYPE=26, LOCAL=27, LOOP=28, NATIVE=29, NOTHING=30, NULL=31, 
		PARENS_LEFT=32, PARENS_RIGHT=33, REAL_TYPE=34, RETURN=35, RETURNS=36, 
		SELECT=37, SET=38, STRING_TYPE=39, TAKES=40, THEN=41, TYPE=42, NEW_LINES=43, 
		UNARY_OP=44, INT=45, REAL=46, BOOL=47, STRING_LITERAL=48, BINARY_OP=49, 
		ID=50, WS=51;
	public static final int
		RULE_typedef = 0, RULE_type = 1, RULE_unary_op = 2, RULE_args_tail = 3, 
		RULE_args = 4, RULE_func_call = 5, RULE_array_ref = 6, RULE_funcRef = 7, 
		RULE_literal = 8, RULE_atomic_expr = 9, RULE_expr = 10, RULE_var_declaration = 11, 
		RULE_global_var_list = 12, RULE_globals = 13, RULE_param_list = 14, RULE_func_declaration = 15, 
		RULE_native_func = 16, RULE_local_var_list = 17, RULE_set = 18, RULE_call = 19, 
		RULE_else_if_clause = 20, RULE_else_clause = 21, RULE_if_then_else = 22, 
		RULE_loop = 23, RULE_exitwhen = 24, RULE_return_statement = 25, RULE_debug = 26, 
		RULE_case_clause = 27, RULE_default_case_clause = 28, RULE_select = 29, 
		RULE_statement = 30, RULE_statement_list = 31, RULE_func = 32, RULE_declaration = 33, 
		RULE_file = 34, RULE_program = 35;
	public static final String[] ruleNames = {
		"typedef", "type", "unary_op", "args_tail", "args", "func_call", "array_ref", 
		"funcRef", "literal", "atomic_expr", "expr", "var_declaration", "global_var_list", 
		"globals", "param_list", "func_declaration", "native_func", "local_var_list", 
		"set", "call", "else_if_clause", "else_clause", "if_then_else", "loop", 
		"exitwhen", "return_statement", "debug", "case_clause", "default_case_clause", 
		"select", "statement", "statement_list", "func", "declaration", "file", 
		"program"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'array'", "'='", "'boolean'", "'['", "']'", "'call'", "'case'", 
		"'code'", "','", "'constant'", "'debug'", "'default'", "'else'", "'elseif'", 
		"'endfunction'", "'endglobals'", "'endif'", "'endloop'", "'endselect'", 
		"'exitwhen'", "'extends'", "'function'", "'globals'", "'handle'", "'if'", 
		"'integer'", "'local'", "'loop'", "'native'", "'nothing'", "'null'", "'('", 
		"')'", "'real'", "'return'", "'returns'", "'select'", "'set'", "'string'", 
		"'takes'", "'then'", "'type'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ARRAY", "ASSIGN", "BOOL_TYPE", "BRACKET_LEFT", "BRACKET_RIGHT", 
		"CALL", "CASE", "CODE_TYPE", "COMMA", "CONSTANT", "DEBUG", "DEFAULT_CASE", 
		"ELSE", "ELSEIF", "ENDFUNCTION", "ENDGLOBALS", "ENDIF", "ENDLOOP", "ENDSELECT", 
		"EXITWHEN", "EXTENDS", "FUNCTION", "GLOBALS", "HANDLE_TYPE", "IF", "INT_TYPE", 
		"LOCAL", "LOOP", "NATIVE", "NOTHING", "NULL", "PARENS_LEFT", "PARENS_RIGHT", 
		"REAL_TYPE", "RETURN", "RETURNS", "SELECT", "SET", "STRING_TYPE", "TAKES", 
		"THEN", "TYPE", "NEW_LINES", "UNARY_OP", "INT", "REAL", "BOOL", "STRING_LITERAL", 
		"BINARY_OP", "ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "j.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public jParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TypedefContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(jParser.TYPE, 0); }
		public List<TerminalNode> ID() { return getTokens(jParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(jParser.ID, i);
		}
		public TerminalNode EXTENDS() { return getToken(jParser.EXTENDS, 0); }
		public TerminalNode HANDLE_TYPE() { return getToken(jParser.HANDLE_TYPE, 0); }
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitTypedef(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_typedef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(TYPE);
			setState(73);
			match(ID);
			setState(74);
			match(EXTENDS);
			setState(75);
			_la = _input.LA(1);
			if ( !(_la==HANDLE_TYPE || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(jParser.ID, 0); }
		public TerminalNode CODE_TYPE() { return getToken(jParser.CODE_TYPE, 0); }
		public TerminalNode HANDLE_TYPE() { return getToken(jParser.HANDLE_TYPE, 0); }
		public TerminalNode INT_TYPE() { return getToken(jParser.INT_TYPE, 0); }
		public TerminalNode REAL_TYPE() { return getToken(jParser.REAL_TYPE, 0); }
		public TerminalNode BOOL_TYPE() { return getToken(jParser.BOOL_TYPE, 0); }
		public TerminalNode STRING_TYPE() { return getToken(jParser.STRING_TYPE, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL_TYPE) | (1L << CODE_TYPE) | (1L << HANDLE_TYPE) | (1L << INT_TYPE) | (1L << REAL_TYPE) | (1L << STRING_TYPE) | (1L << ID))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unary_opContext extends ParserRuleContext {
		public TerminalNode UNARY_OP() { return getToken(jParser.UNARY_OP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Unary_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterUnary_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitUnary_op(this);
		}
	}

	public final Unary_opContext unary_op() throws RecognitionException {
		Unary_opContext _localctx = new Unary_opContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unary_op);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(UNARY_OP);
			setState(80);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Args_tailContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(jParser.COMMA, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Args_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterArgs_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitArgs_tail(this);
		}
	}

	public final Args_tailContext args_tail() throws RecognitionException {
		Args_tailContext _localctx = new Args_tailContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_args_tail);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(COMMA);
			setState(83);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<Args_tailContext> args_tail() {
			return getRuleContexts(Args_tailContext.class);
		}
		public Args_tailContext args_tail(int i) {
			return getRuleContext(Args_tailContext.class,i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitArgs(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_args);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			expr();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(86);
				args_tail();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_callContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(jParser.ID, 0); }
		public TerminalNode PARENS_LEFT() { return getToken(jParser.PARENS_LEFT, 0); }
		public TerminalNode PARENS_RIGHT() { return getToken(jParser.PARENS_RIGHT, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitFunc_call(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(ID);
			setState(93);
			match(PARENS_LEFT);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << NULL) | (1L << PARENS_LEFT) | (1L << UNARY_OP) | (1L << INT) | (1L << REAL) | (1L << BOOL) | (1L << STRING_LITERAL) | (1L << ID))) != 0)) {
				{
				setState(94);
				args();
				}
			}

			setState(97);
			match(PARENS_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_refContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(jParser.ID, 0); }
		public TerminalNode BRACKET_LEFT() { return getToken(jParser.BRACKET_LEFT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode BRACKET_RIGHT() { return getToken(jParser.BRACKET_RIGHT, 0); }
		public Array_refContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_ref; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterArray_ref(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitArray_ref(this);
		}
	}

	public final Array_refContext array_ref() throws RecognitionException {
		Array_refContext _localctx = new Array_refContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_array_ref);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(ID);
			setState(100);
			match(BRACKET_LEFT);
			setState(101);
			expr();
			setState(102);
			match(BRACKET_RIGHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncRefContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(jParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(jParser.ID, 0); }
		public FuncRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterFuncRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitFuncRef(this);
		}
	}

	public final FuncRefContext funcRef() throws RecognitionException {
		FuncRefContext _localctx = new FuncRefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcRef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(FUNCTION);
			setState(105);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(jParser.INT, 0); }
		public TerminalNode REAL() { return getToken(jParser.REAL, 0); }
		public TerminalNode BOOL() { return getToken(jParser.BOOL, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(jParser.STRING_LITERAL, 0); }
		public TerminalNode NULL() { return getToken(jParser.NULL, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << INT) | (1L << REAL) | (1L << BOOL) | (1L << STRING_LITERAL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atomic_exprContext extends ParserRuleContext {
		public Unary_opContext unary_op() {
			return getRuleContext(Unary_opContext.class,0);
		}
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Array_refContext array_ref() {
			return getRuleContext(Array_refContext.class,0);
		}
		public FuncRefContext funcRef() {
			return getRuleContext(FuncRefContext.class,0);
		}
		public TerminalNode ID() { return getToken(jParser.ID, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public Atomic_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomic_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterAtomic_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitAtomic_expr(this);
		}
	}

	public final Atomic_exprContext atomic_expr() throws RecognitionException {
		Atomic_exprContext _localctx = new Atomic_exprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_atomic_expr);
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				unary_op();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				func_call();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				array_ref();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				funcRef();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				match(ID);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(114);
				literal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Atomic_exprContext atomic_expr() {
			return getRuleContext(Atomic_exprContext.class,0);
		}
		public TerminalNode BINARY_OP() { return getToken(jParser.BINARY_OP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PARENS_LEFT() { return getToken(jParser.PARENS_LEFT, 0); }
		public TerminalNode PARENS_RIGHT() { return getToken(jParser.PARENS_RIGHT, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
			case NULL:
			case UNARY_OP:
			case INT:
			case REAL:
			case BOOL:
			case STRING_LITERAL:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				atomic_expr();
				setState(120);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(118);
					match(BINARY_OP);
					setState(119);
					expr();
					}
					break;
				}
				}
				break;
			case PARENS_LEFT:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(122);
				match(PARENS_LEFT);
				setState(123);
				expr();
				setState(124);
				match(PARENS_RIGHT);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(jParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(jParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ARRAY() { return getToken(jParser.ARRAY, 0); }
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterVar_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitVar_declaration(this);
		}
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_var_declaration);
		int _la;
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(128);
				type();
				setState(129);
				match(ID);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(130);
					match(ASSIGN);
					setState(131);
					expr();
					}
				}

				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(134);
				type();
				setState(135);
				match(ARRAY);
				setState(136);
				match(ID);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_var_listContext extends ParserRuleContext {
		public List<TerminalNode> CONSTANT() { return getTokens(jParser.CONSTANT); }
		public TerminalNode CONSTANT(int i) {
			return getToken(jParser.CONSTANT, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(jParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(jParser.ID, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(jParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(jParser.ASSIGN, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> NEW_LINES() { return getTokens(jParser.NEW_LINES); }
		public TerminalNode NEW_LINES(int i) {
			return getToken(jParser.NEW_LINES, i);
		}
		public List<Var_declarationContext> var_declaration() {
			return getRuleContexts(Var_declarationContext.class);
		}
		public Var_declarationContext var_declaration(int i) {
			return getRuleContext(Var_declarationContext.class,i);
		}
		public List<TerminalNode> ARRAY() { return getTokens(jParser.ARRAY); }
		public TerminalNode ARRAY(int i) {
			return getToken(jParser.ARRAY, i);
		}
		public Global_var_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_var_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).enterGlobal_var_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jListener ) ((jListener)listener).exitGlobal_var_list(this);
		}
	}
